# Kubernetes

./: Makefile  README.md
src/: CMakeLists.txt  Dockerfile  deployment.yaml  main.cc  service.yaml
src/templates/: index.html
